--- a/playbooks/server_deploy.yml
+++ b/playbooks/server_deploy.yml
@@ -13,19 +13,6 @@
 
 - hosts: all
   become: true
-  tasks:
-
-  - name: Install Apache, PHP, and MariaDB Packages (Ubuntu)
-    apt: 
-      name: 
-        - apache2 
-        - libapache2-mpm-itk
-        - mariadb-server
-        - php
-        - php-fpm
-        - libapache2-mod-php
-        - php-mysql
-      state: latest
-    when: ansible_distribution == "Ubuntu"
-
+  roles:
+    - base
   
