--- a/playbooks/roles/base/tasks/main.yml
+++ b/playbooks/roles/base/tasks/main.yml
@@ -16,3 +16,9 @@
     name: apache2
     state: started
     enabled: yes
+
+- name: Adds and Installs the ppa:ondrej/php repo to Ubuntu
+  ansible.builtin.apt_repository: 
+    repo: ppa:ondrej/php
+    update_cache: yes
+  when: ansible_distribution == "Ubuntu"
