--- a/playbooks/roles/base/tasks/main.yml
+++ b/playbooks/roles/base/tasks/main.yml
@@ -26,9 +26,9 @@
 - name: Install Specific PHP versions and Packages
   apt:
     name:
-      - php"{{ php_versions }}"
-      - php"{{ php_versions }}"-fpm
-      - libapache2-mod-php"{{ php_versions }}"
-      - php"{{ php_versions }}"-mysql
+      - php{{ php_versions }}
+      - php{{ php_versions }}-fpm
+      - libapache2-mod-php{{ php_versions }}
+      - php{{ php_versions }}-mysql
     state: present
   when: ansible_distribution == "Ubuntu"
