--- a/playbooks/roles/base/tasks/main.yml
+++ b/playbooks/roles/base/tasks/main.yml
@@ -8,6 +8,7 @@
       - php-fpm
       - libapache2-mod-php
       - php-mysql
+      - software-properties-common
     state: latest
   when: ansible_distribution == "Ubuntu"
 
