added apt cache update

--- a/playbooks/roles/base/tasks/main.yml
+++ b/playbooks/roles/base/tasks/main.yml
@@ -26,10 +26,12 @@
 
 - name: Install Specific PHP versions and Packages
   apt:
+    update_cache: yes
     name:
       - php{{ php_versions }}
       - php{{ php_versions }}-fpm
       - libapache2-mod-php{{ php_versions }}
       - php{{ php_versions }}-mysql
     state: present
+    changed_when: false
   when: ansible_distribution == "Ubuntu"
