--- a/playbooks/remove_packages.yml
+++ b/playbooks/remove_packages.yml
@@ -15,3 +15,8 @@
           - php-mysql
         state: absent
       when: ansible_distribution == "Ubuntu"
+
+    - name: Removes the ppa:ondrej/php repo to Ubuntu
+      ansible.builtin.apt_repository: 
+        repo: ppa:ondrej/php
+        state: absent
