--- a/playbooks/remove_packages.yml
+++ b/playbooks/remove_packages.yml
@@ -16,6 +16,15 @@
         state: absent
       when: ansible_distribution == "Ubuntu"
 
+    - name: Remove Specific PHP versions and Packages
+      apt:
+        name:
+          - "php{{ php_versions[0-3] }}"
+          - "php{{ php_versions[0-3] }}-fpm"
+          - "libapache2-mod-php{{ php_versions[0-3] }}"
+          - "php{{ php_versions[0-3] }}-mysql"
+        state: absent
+
     - name: Removes the ppa:ondrej/php repo to Ubuntu
       ansible.builtin.apt_repository: 
         repo: ppa:ondrej/php
