added state present

--- a/playbooks/roles/base/tasks/main.yml
+++ b/playbooks/roles/base/tasks/main.yml
@@ -32,3 +32,4 @@
       - "php{{ php_versions[0-2] }}-fpm"
       - "libapache2-mod-php{{ php_versions[0-2] }}"
       - "php{{ php_versions[0-2] }}-mysql"
+    state: present
