--- a/host_vars/192.168.40.11.yml
+++ b/host_vars/192.168.40.11.yml
@@ -1,6 +1,7 @@
 web_user: "jonathan"
 primary_domain: "jb2fabrications.com"
 secondary_domain: ""
+default_php-version: "8.1"
 php_versions:
   - 8.0
   - 8.1
