--- a/host_vars/192.168.40.11.yml
+++ b/host_vars/192.168.40.11.yml
@@ -1,9 +1,13 @@
 web_user: "jonathan"
 primary_domain: "jb2fabrications.com"
 secondary_domain: ""
-default_php_version: 8.1
+default_php_version: "8.1"
 php_versions:
-  - 8.0
-  - 8.1
-  - 8.2
+  - "php8.0"
+  - "php8.1"
+  - "php8.2"
+php_fpm_packages:
+  - "fpm"
+  - "libapache2-mod"
+  - "mysql"
 apache_template-file: apache_vhost.conf.j2
