--- a/playbooks/roles/base/tasks/main.yml
+++ b/playbooks/roles/base/tasks/main.yml
@@ -24,13 +24,14 @@
     update_cache: yes
   when: ansible_distribution == "Ubuntu"
 
-- name: Install Specific PHP versions and Packages
+- name: Install Specific PHP Base Packages
   apt:
     update_cache: yes
-    name:
-      - "php{{ php_versions[0-2] }}"
-      - "php{{ php_versions[0-2] }}-fpm"
-      - "libapache2-mod-php{{ php_versions[0-2] }}"
-      - "php{{ php_versions[0-2] }}-mysql"
+    name: "{{ php_versions[0-2] }}"
     state: present
-    
+
+- name: Install PHP-FPM Packages
+  apt:
+    name: "{{ php_versions }}-{{ item }}"
+    state: present
+  with_items: "{{ php_fpm_packages }}"
