--- a/playbooks/roles/base/tasks/main.yml
+++ b/playbooks/roles/base/tasks/main.yml
@@ -27,11 +27,12 @@
 - name: Install Specific PHP Base Packages
   apt:
     update_cache: yes
-    name: "{{ php_versions[0-2] }}"
+    name: "{{ item }}"
     state: present
+  with_items: "{{ php_versions[0-2] }}"
 
 - name: Install PHP-FPM Packages
   apt:
-    name: "{{ php_versions }}-{{ item }}"
+    name: "{{ php_versions[0-2] }}-{{ item }}"
     state: present
   with_items: "{{ php_fpm_packages }}"
