--- a/playbooks/roles/base/tasks/main.yml
+++ b/playbooks/roles/base/tasks/main.yml
@@ -23,9 +23,8 @@
 - name: Install Specific PHP Base Packages
   apt:
     update_cache: yes
-    name: "{{ item }}"
+    name: "{{ php_versions }}"
     state: present
-  with_items: "{{ php_versions[0-2] }}"
 
 - name: Install PHP-FPM Packages
   apt:
