--- a/playbooks/roles/base/tasks/main.yml
+++ b/playbooks/roles/base/tasks/main.yml
@@ -28,12 +28,14 @@
 
 - name: Install PHP-FPM Packages
   apt:
-    name: "{{ php_versions[0-2] }}-{{ item }}"
+    set_fact: vers="{{ php_versions }}"
+    name: "{{ item.vers }}"
     state: present
-  with_items: "{{ php_fpm_packages }}"
+  loop: 
+    - { vers: '{{ php_fpm_packages }}'}
 
 - name: Install Apache PHP Packages
   apt:
-    name: "{{ php_apache_packages }}-{{ item }}"
-    state: present
+    name="{{ php_apache_packages }}-{{ item }}"
+    state="present"
   with_items: "{{ php_versions[0-2] }}"
