modified vars to list out all php versions and packages

--- a/host_vars/192.168.40.11.yml
+++ b/host_vars/192.168.40.11.yml
@@ -3,11 +3,20 @@ primary_domain: "jb2fabrications.com"
 secondary_domain: ""
 default_php_version: "8.1"
 php_versions:
+  - "php7.4"
+  - "php7.4-fpm"
+  - "libapache2-mod-php7.4"
+  - "php7.4-mysql"
   - "php8.0"
+  - "php8.0-fpm"
+  - "libapache2-mod-php8.0"
+  - "php8.0-mysql"
   - "php8.1"
+  - "php8.1-fpm"
+  - "libapache2-mod-php8.1"
+  - "php8.1-mysql"
   - "php8.2"
-php_fpm_packages:
-  - "fpm"
-  - "mysql"
-php_apache_packages: "libapache2-mod"
+  - "php8.2-fpm"
+  - "libapache2-mod-php8.2"
+  - "php8.2-mysql"
 apache_template-file: apache_vhost.conf.j2
