--- a/host_vars/192.168.40.11.yml
+++ b/host_vars/192.168.40.11.yml
@@ -7,16 +7,20 @@ php_versions:
   - "php7.4-fpm"
   - "libapache2-mod-php7.4"
   - "php7.4-mysql"
+  - "php7.4-imagick"
   - "php8.0"
   - "php8.0-fpm"
   - "libapache2-mod-php8.0"
   - "php8.0-mysql"
+  - "php8.0-imagick"
   - "php8.1"
   - "php8.1-fpm"
   - "libapache2-mod-php8.1"
   - "php8.1-mysql"
+  - "php8.1-imagick"
   - "php8.2"
   - "php8.2-fpm"
   - "libapache2-mod-php8.2"
   - "php8.2-mysql"
+  - "php8.2-imagick"
 apache_template-file: apache_vhost.conf.j2
