added task to enabled PHP version in Apache and restart service

--- a/playbooks/roles/php_setup/handlers/main.yml
+++ b/playbooks/roles/php_setup/handlers/main.yml
@@ -2,3 +2,8 @@
   service:
     name: "php{{ default_php_version }}-fpm.service"
     state: restarted
+
+- name: Restart-Apache
+  service: 
+    name: apache2
+    state: restarted
