--- a/playbooks/roles/php_setup/tasks/main.yml
+++ b/playbooks/roles/php_setup/tasks/main.yml
@@ -10,3 +10,7 @@
     src: "php_fpm_user.conf.j2"
     dest: "/etc/php/{{ default_php_version }}/fpm/pool.d/{{ web_user }}.conf"
   notify: Restart_PHP-FPM
+
+- name: Enable PHP Version in Apache
+  shell: /usr/sbin/a2enmod "php{{ default_php_version }}"
+  notify: Restart-Apache
