--- a/playbooks/roles/mysql_setup/tasks/main.yml
+++ b/playbooks/roles/mysql_setup/tasks/main.yml
@@ -22,5 +22,5 @@
 - name: Configure MyTop
   template:
     src: "mytop_config.j2"
-    dest: /root/.mytop
+    dest: "/root/.mytop"
     state: present
