--- a/playbooks/roles/mysql_setup/tasks/main.yml
+++ b/playbooks/roles/mysql_setup/tasks/main.yml
@@ -3,6 +3,7 @@
     name: root
     password: "{{ mysql_root_password }}"
     login_unix_socket: /var/run/mysqld/mysqld.sock
+  when: mysql_root_password_update
 
 - name: Copy .my.cnf file with root credentials
   template:
@@ -11,6 +12,7 @@
     owner: root
     group: root
     mode: 0600
+  when: mysql_root_password_update
 
 - name: Removes all anonymous user accounts
   mysql_user: 
