--- a/host_vars/192.168.40.11.yml
+++ b/host_vars/192.168.40.11.yml
@@ -25,3 +25,4 @@ php_versions:
   - "php8.2-imagick"
 apache_template-file: apache_vhost.conf.j2
 mysql_root_password: ""
+mysql_root_password_update: false
