added mytop package

--- a/playbooks/roles/base/tasks/main.yml
+++ b/playbooks/roles/base/tasks/main.yml
@@ -4,6 +4,7 @@
       - apache2 
       - libapache2-mpm-itk
       - mariadb-server
+      - mytop
       - python3-mysqldb
       - software-properties-common
     state: latest
