added new variables for true/false if primary or secondary domains are being targeted

--- a/host_vars/192.168.40.11.yml
+++ b/host_vars/192.168.40.11.yml
@@ -1,6 +1,8 @@
 web_user: "jonathan"
 primary_domain: "jb2fabrications.com"
 secondary_domain: ""
+primary_domain_update: true
+secondary_domain_update: false
 default_php_version: "8.0"
 php_versions:
   - "php7.4"
