--- a/playbooks/roles/misc_setup/tasks/main.yml
+++ b/playbooks/roles/misc_setup/tasks/main.yml
@@ -15,3 +15,11 @@
     group: root
     mode: 0644
   when: secondary_domain_update
+
+- name: Configure Custom Log Rotation for PHP-FPM
+  template: 
+    src: "log_php-fpm.j2"
+    dest: "/etc/logrotate.d/{{ web_user }}-php-fpm"
+    owner: root
+    group: root
+    mode: 0644
