--- a/playbooks/remove_packages.yml
+++ b/playbooks/remove_packages.yml
@@ -3,7 +3,7 @@
 - hosts: all
   become: true
   tasks: 
-    - name: Remove Apache, PHP, and MariaDB Packages (Ubuntu)
+    - name: Remove Apache and MariaDB Packages (Ubuntu)
       apt: 
         name: 
           - apache2 
