added a task to enable mod_rewrite

--- a/playbooks/roles/apache_setup/tasks/main.yml
+++ b/playbooks/roles/apache_setup/tasks/main.yml
@@ -51,3 +51,7 @@
   shell: /usr/sbin/a2ensite "{{ secondary_domain }}"
   notify: Restart-Apache
   when: secondary_domain_update
+
+- name: Enable Mod_Rewrite
+  shell: /usr/sbin/a2enmod rewrite
+  notify: Restart-Apache
