added php modules to be installed

--- a/host_vars/192.168.40.11.yml
+++ b/host_vars/192.168.40.11.yml
@@ -17,21 +17,45 @@ php_versions:
   - "libapache2-mod-php7.4"
   - "php7.4-mysql"
   - "php7.4-imagick"
+  - "php7.4-curl"
+  - "php7.4-dom"
+  - "php7.4-xml"
+  - "php7.4-zip"
+  - "php7.4-mbstring"
+  - "php7.4-intl"
   - "php8.0"
   - "php8.0-fpm"
   - "libapache2-mod-php8.0"
   - "php8.0-mysql"
   - "php8.0-imagick"
+  - "php8.0-curl"
+  - "php8.0-dom"
+  - "php8.0-xml"
+  - "php8.0-zip"
+  - "php8.0-mbstring"
+  - "php8.0-intl"
   - "php8.1"
   - "php8.1-fpm"
   - "libapache2-mod-php8.1"
   - "php8.1-mysql"
   - "php8.1-imagick"
+  - "php8.1-curl"
+  - "php8.1-dom"
+  - "php8.1-xml"
+  - "php8.1-zip"
+  - "php8.1-mbstring"
+  - "php8.1-intl"
   - "php8.2"
   - "php8.2-fpm"
   - "libapache2-mod-php8.2"
   - "php8.2-mysql"
   - "php8.2-imagick"
+  - "php8.2-curl"
+  - "php8.2-dom"
+  - "php8.2-xml"
+  - "php8.2-zip"
+  - "php8.2-mbstring"
+  - "php8.2-intl"
 apache_template-file: apache_vhost.conf.j2
 
 # Set `mysql_root_password_update` to `true` and define `mysql_root_password` to update mysql root password
