--- a/playbooks/script_setup.yml
+++ b/playbooks/script_setup.yml
@@ -10,3 +10,20 @@
       owner: "{{ web_user }}"
       group: "{{ web_user }}"
       mode: 0755
+
+  - name: Download Latest Repository of ProxMox Scripts
+    get_url:
+      url: https://github.com/JBarker90/proxmox-scripts.git
+      dest: /tmp/proxmox-scripts
+
+  - name: Copy and Sync scripts to /usr/local/sbin
+    copy:
+      src: /tmp/proxmox-scripts
+      dest: /usr/local/sbin/
+      mode: 0755
+      state: latest
+  
+  - name: Clean up temporary directory
+    file:
+      path: /tmp/proxmox-scripts
+      state: absent
