--- a/playbooks/script_setup.yml
+++ b/playbooks/script_setup.yml
@@ -22,9 +22,11 @@
         src: /tmp/proxmox-scripts
         dest: /usr/local/sbin/
         mode: 0755
+        remote_src: true
         state: latest
     
     - name: Clean up temporary directory
       file:
         path: /tmp/proxmox-scripts
+        remote_src: true
         state: absent
