--- a/playbooks/script_setup.yml
+++ b/playbooks/script_setup.yml
@@ -19,7 +19,7 @@
 
     - name: Copy and Sync scripts to /usr/local/sbin
       copy:
-        src: /tmp/proxmox-scripts
+        src: /tmp/proxmox-scripts/
         dest: /usr/local/sbin/
         owner: "{{ web_user }}"
         group: "{{ web_user }}"
