--- a/playbooks/roles/base/tasks/main.yml
+++ b/playbooks/roles/base/tasks/main.yml
@@ -8,22 +8,24 @@
       - python3-mysqldb
       - software-properties-common
     state: latest
-  when: ansible_distribution == "Ubuntu"
+  when: (ansible_distribution == "Ubuntu") and (base_install)
 
 - name: Start and Enable the Apache Service
   service: 
     name: apache2
     state: started
     enabled: yes
+  when: base_install
 
 - name: Adds and Installs the ppa:ondrej/php repo to Ubuntu
   ansible.builtin.apt_repository: 
     repo: ppa:ondrej/php
     update_cache: yes
-  when: ansible_distribution == "Ubuntu"
+  when: (ansible_distribution == "Ubuntu") and (base_install)
 
 - name: Install Specific PHP Base and PHP-FPM Packages
   apt:
     update_cache: yes
     name: "{{ php_versions }}"
     state: present
+  when: base_install
