added the mod security module to list of base packages

--- a/playbooks/roles/base/tasks/main.yml
+++ b/playbooks/roles/base/tasks/main.yml
@@ -3,6 +3,7 @@
     name: 
       - apache2 
       - libapache2-mpm-itk
+      - libapache2-mod-security2
       - mariadb-server
       - mytop
       - python3-mysqldb
