--- a/playbooks/roles/apache_setup/tasks/main.yml
+++ b/playbooks/roles/apache_setup/tasks/main.yml
@@ -59,3 +59,6 @@
 - name: Enable Mod_Rewrite
   shell: /usr/sbin/a2enmod rewrite
   notify: Restart-Apache
+
+- include_tasks: modsecurity-install.yml
+  when: base_install == 'true'
