--- a/playbooks/roles/apache_setup/tasks/modsecurity-install.yml
+++ b/playbooks/roles/apache_setup/tasks/modsecurity-install.yml
@@ -22,13 +22,16 @@
   apt_repository:
     repo: "deb http://modsecurity.digitalwave.hu/ubuntu/ jammy-backports main"
     state: present
+    update_cache: true
   when: ansible_os_family == "Debian" and ansible_distribution_version == "22.04"
 
 - name: Add Backport Policy
   template:
     src: 99modsecurity.j2
     dest: "/etc/apt/preferences.d/99modsecurity"
-    update_cache: true
+    owner: root
+    group: root
+    mode: 0644
 
 # Not sure if the state being present will not reinstall backport properly
 - name: Reinstall Backported libapache2-mod-security2
@@ -60,17 +63,19 @@
     owner: root
     group: root
     mode: 0644
+    remote_src: yes
 
 - name: Move the Rules directory to /etc/modsecurity
   copy:
     src: "/tmp/coreruleset-{{ default_mod_security_version }}/rules"
-    dest: "/etc/modsecurity/rules"
+    dest: "/etc/modsecurity"
     owner: root
     group: root
     mode: 0755
+    remote_src: yes
 
 - name: Add lines to load ModSecurity rules
   template:
     src: security2.conf.j2
-    dest: "/etc/apache2/mods-enabled/security2.conf"
+    dest: "/etc/apache2/mods-available/security2.conf"
   notify: Restart-Apache
