--- a/playbooks/roles/base/tasks/main.yml
+++ b/playbooks/roles/base/tasks/main.yml
@@ -8,7 +8,7 @@
       - mytop
       - python3-mysqldb
       - software-properties-common
-    state: latest
+    state: present
   when: (ansible_distribution == "Ubuntu") and (base_install)
 
 - name: Start and Enable the Apache Service
