--- a/playbooks/roles/mysql_setup/tasks/main.yml
+++ b/playbooks/roles/mysql_setup/tasks/main.yml
@@ -1,3 +1,8 @@
+- name: Install Mytop
+  apt:
+    name: mytop
+    state: latest
+
 - name: Sets MySQL root password
   mysql_user:
     name: root
