added install for unzip as dependency

--- a/playbooks/roles/apache_setup/tasks/modsecurity-install.yml
+++ b/playbooks/roles/apache_setup/tasks/modsecurity-install.yml
@@ -5,6 +5,7 @@
       - lsb-release
       - ca-certificates
       - curl
+      - unzip
     state: present
   
 - name: Add Digitalwave Backport Apt key
