--- a/playbooks/roles/mysql_setup/tasks/main.yml
+++ b/playbooks/roles/mysql_setup/tasks/main.yml
@@ -1,12 +1,8 @@
-- name: Install Mytop
-  apt:
-    name: mytop
-    state: latest
-
 - name: Sets MySQL root password
   mysql_user:
     name: root
-    password: "{{ mysql_root_password }}"
+    login_user: root
+    login_password: "{{ mysql_root_password }}"
     login_unix_socket: /var/run/mysqld/mysqld.sock
   when: mysql_root_password_update
 
