--- a/host_vars/webhost-domain.com.yml.sample
+++ b/host_vars/webhost-domain.com.yml.sample
@@ -44,6 +44,9 @@ php_versions:
   - "php8.1-zip"
   - "php8.1-mbstring"
   - "php8.1-intl"
+  - "php8.1-bcmath"
+  - "php8.1-gd"
+  - "php8.1-soap"
   - "php8.2"
   - "php8.2-fpm"
   - "libapache2-mod-php8.2"
